# mazemouse3d

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
crates/maze-gen/: Cargo.toml
crates/maze-gen/src/: draw.rs  lib.rs  main.rs  maze.rs
crates/maze-nav/: Cargo.toml
crates/maze-nav/src/: lib.rs
scripts/: generate-default-maze.mjs  playwright.config.ts  verify-controller.mjs  verify-sim.spec.ts
src/: main.ts  style.css
src/app/: mazeWorkerClient.ts  micromousePreview.ts  simulationDebug.ts  state.ts  workbench.ts
src/domain/: defaultMazeData.ts  dwa.ts  maze.ts  mazeAdapter.ts  navigation.ts
src/rendering/: babylonMazeSimulation.ts  babylonMazeViewport.ts  debugCollisions.ts  dwaMotorDriver.ts  dwbMotorDriver.ts  mazeGeometry.ts  micromouseModel.ts  micromouseRig.ts  motorDriver.ts  plannedMotorDriver.ts  randomMotorDriver.ts
src/test/: debugCollisions.test.ts  defaultMazeData.test.ts  dwaMotorDriver.test.ts  dwbMotorDriver.test.ts  mazeAdapter.test.ts  mazeGeometry.test.ts  mazeWorkerClient.test.ts  micromouseModel.test.ts  plannedMotorDriver.test.ts  randomMotorDriver.test.ts  workerProtocol.test.ts
src/workers/: dwaWorker.ts  mazeWorker.ts  navigationWorker.ts
