[workspace]
members = ["crates/maze-gen", "crates/maze-nav"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
rand = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.106"
